@@ -9,7 +9,7 @@ use DynaLoader();
 use Carp ();
 @ISA = qw(DynaLoader);
 
-$VERSION = '2.1005';
+$VERSION = '2.1007';
 
 bootstrap DBD::mysql $VERSION;
 
